--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -47,6 +47,10 @@
     grid-template-columns: minmax(24px, 1fr) minmax(auto, 1120px) minmax(24px, 1fr);
   }
 
+  &.wishList-grid {
+    grid-template-columns: minmax(24px, 1fr) minmax(auto, 1280px) minmax(24px, 1fr);
+  }
+
   padding: 0;
 
   >* {
