--- a/src/assets/styles/cmps/StayPreview.scss
+++ b/src/assets/styles/cmps/StayPreview.scss
@@ -51,16 +51,24 @@
     }
 
     .info {
+        margin-block-start: 0.5rem;
+        line-height: 1.13rem;
         padding: 0;
 
-        .stay-name {
-            font-family: Airbnb_Cereal-Medium;
-            color: $clr8;
+        .stay-header {
             justify-content: space-between;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            white-space: nowrap;
-            margin: 0;
+            margin-block-end: 0;
+
+            .stay-name {
+                font-family: Airbnb_Cereal-Medium;
+                color: $clr8;
+                justify-content: space-between;
+                overflow: hidden;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                width: 80%;
+                margin: 0;
+            }
 
             .rate {
                 gap: 0.4em;
@@ -81,6 +89,7 @@
         .cost {
             font-family: AirbnbCereal-Book;
             color: $clr8;
+            margin-block-start: 0.5rem;
 
             .price {
                 font-family: Airbnb_Cereal-Medium;
