--- a/src/assets/styles/cmps/StayEdit.scss
+++ b/src/assets/styles/cmps/StayEdit.scss
@@ -20,6 +20,10 @@
       outline: 0;
       font-family: inherit;
       border-bottom: 1px solid rgb(215, 215, 215);
+      padding: 10px;
+      border-radius: 15px;
+      min-width: 100px;
+      width: 100%;
     }
     .stay-name-editor {
       width: 100%;
@@ -34,6 +38,7 @@
       }
       .stay-name-inputs {
         display: flex;
+        justify-content: space-between;
       }
     }
     .add-imgs-container {
@@ -47,6 +52,9 @@
       margin-top: 15px;
       text-align: left;
       align-items: start;
+      p {
+        height: 100%;
+      }
       .add-big-img-upload {
         grid-column: 1;
         grid-row: 1/-1;
