--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -37,9 +37,9 @@
 
 // userpages
 @import 'cmps/LoginSignUp';
-<<<<<<< HEAD
-=======
 
 // stayEdit
-@import 'cmps/StayEdit.scss'
->>>>>>> dfe40f34682cee5486b646cd844ae03944371370
+@import 'cmps/StayEdit.scss';
+
+// dashboard
+@import 'cmps/Dashboard.scss'
