--- a/src/assets/styles/cmps/StayDetails.scss
+++ b/src/assets/styles/cmps/StayDetails.scss
@@ -128,6 +128,7 @@
     p {
       font-size: 0.8em;
       font-family: Quicksand;
+      color: #717171;
     }
 
     .line {
@@ -207,6 +208,7 @@
 
 .host-info {
   margin-block-start: 1.5em;
+  margin-block-end: 1.5em;
   .left-side {
     width: 65%;
   }
