--- a/src/assets/styles/cmps/DetailsOrderBox.scss
+++ b/src/assets/styles/cmps/DetailsOrderBox.scss
@@ -3,7 +3,7 @@
   top: 32px;
   border: 1px solid #00000030;
   border-radius: 13px;
-  padding: 25px 20px 20px 20px;
+  padding: 25px 20px 0px 20px;
   // width: 300px;
   height: max-content;
   width: 83%;
@@ -32,6 +32,10 @@
   }
   img {
     width: 13px;
+  }
+  hr {
+    color: aqua;
+    width: 10px;
   }
 }
 
@@ -180,6 +184,8 @@ span.reviews {
 
 .total {
   margin-block-start: 1em;
+  font-family: Airbnb_Cereal-Medium;
+  font-size: 0.9em;
 }
 
 p.footer {
