--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,7 +17,8 @@
 @import 'cmps/ReviewList';
 @import 'cmps/StayList';
 @import 'cmps/StayPreview';
-@import 'cmps/CarouselFilterPreview.scss';
+@import 'cmps/WishListPreview';
+@import 'cmps/CarouselFilterPreview';
 @import 'cmps/UserNav';
 @import 'cmps/InnerHeader';
 @import 'cmps/AppHeaderDetails';
