--- a/src/assets/styles/cmps/StayEdit.scss
+++ b/src/assets/styles/cmps/StayEdit.scss
@@ -1,6 +1,6 @@
 .stay-edit-main-container {
   display: grid;
-  grid-template-columns: minmax(80px, 180px) 1fr minmax(80px, 180px);
+  grid-template-columns: minmax(24px, 50px) 1fr minmax(24px, 50px);
   > * {
     grid-column: 2;
   }
@@ -12,6 +12,7 @@
   //     border-bottom: 1px solid rgb(215, 215, 215);
   //   }
   .stay-edit-container {
+    margin-block-start: 50px;
     background-color: rgb(224, 224, 224);
     border-radius: 15px;
     padding: 20px;
