--- a/src/assets/styles/cmps/Reservation.scss
+++ b/src/assets/styles/cmps/Reservation.scss
@@ -6,7 +6,7 @@
 }
 
 .left-side {
-  width: 60%;
+  width: 50%;
   //
   display: flex;
   flex-direction: column;
@@ -58,7 +58,13 @@
 
 ///////////////////////////////////////////
 .right-side {
-  width: 40%;
-  //
-  //   border: 1px solid pink;
+  width: 50%;
+  border: 1px solid pink;
+  margin: 0;
+  padding: 0;
+  .reservation-title {
+    font-size: 2em;
+    text-align: center;
+    border-bottom: 1px solid rgb(206, 203, 203);
+  }
 }
