--- a/src/assets/styles/cmps/Reservation.scss
+++ b/src/assets/styles/cmps/Reservation.scss
@@ -1,16 +1,19 @@
 .reservation {
-  border: 1px solid blueviolet;
+  // border-top: 3px solid rgb(212, 198, 198);
+  border: 1px solid rgb(212, 198, 198);
+  border-radius: 13px;
   height: max-content;
   width: 100%;
+  padding: 0;
   margin-bottom: 10em; // DELETE AFTER!
 }
 
 .left-side {
-  width: 50%;
+  width: 40%;
   //
   display: flex;
   flex-direction: column;
-  border: 1px solid red;
+  // border: 1px solid red;
   .reservation-header {
     align-items: center;
     gap: 2em;
@@ -34,7 +37,7 @@
     display: flex;
     flex-direction: column;
     // align-items: center;
-    border: 1px solid rgb(136, 36, 36);
+    // border: 1px solid rgb(136, 36, 36);
   }
 
   .second-row {
@@ -44,6 +47,11 @@
     div {
       background-color: rgb(111, 175, 175);
       width: 100%;
+      h1 {
+        text-align: center;
+        font-size: 1.5em;
+        margin-block-start: 0.3em;
+      }
     }
   }
   .third-row {
@@ -58,13 +66,69 @@
 
 ///////////////////////////////////////////
 .right-side {
-  width: 50%;
-  border: 1px solid pink;
+  display: flex;
+  flex-direction: column;
+  // gap: 1.3em;
+  // border-bottom: 1px solid rgb(212, 198, 198);
+
+  width: 60%;
+  border-left: 3px solid rgb(212, 198, 198);
   margin: 0;
   padding: 0;
   .reservation-title {
     font-size: 2em;
     text-align: center;
     border-bottom: 1px solid rgb(206, 203, 203);
+  }
+  .subtitle {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    // display: flex;
+    // justify-content: space-between;
+  }
+  .card {
+    display: grid;
+    grid-template-columns: 14.5% 14.5% 14.5% 14.5% 14.5% 13.5% 7% 7%;
+    // grid-template-columns: repeat(8, 1fr);
+    align-items: center;
+    justify-items: center;
+    margin-bottom: 1.3em;
+    border-bottom: 1px solid rgb(212, 198, 198);
+    // display: flex;
+    img {
+      width: 45px;
+      height: 45px;
+      border-radius: 50px;
+      object-fit: cover;
+      margin-left: 0.7em;
+    }
+
+    h3,
+    p {
+      text-align: center;
+      margin: 0;
+      margin-left: 0.3em;
+    }
+
+    .btn {
+      color: black;
+      border-radius: 15px;
+      width: max-content;
+      padding: 0.5em;
+      cursor: pointer;
+      transition: 0.3s;
+      &.approve-btn {
+        background-color: #e9edc9;
+        &:hover {
+          background-color: darken(#e9edc9, 10%);
+        }
+      }
+      &.reject-btn {
+        background-color: rgb(255, 209, 209);
+        &:hover {
+          background-color: darken(rgb(255, 209, 209), 10%);
+        }
+      }
+    }
   }
 }
