--- a/src/assets/styles/cmps/StayEdit.scss
+++ b/src/assets/styles/cmps/StayEdit.scss
@@ -1,8 +1,8 @@
 .stay-edit-main-container {
   display: grid;
-  border: 1px solid black; // Omer delete it capara
+  // border: 1px solid black; // Omer delete it capara
   height: 100%;
-  grid-template-columns: minmax(24px, 50px) 1fr minmax(24px, 50px);
+  grid-template-columns: minmax(15px, 30px) 1fr minmax(15px, 30px);
   > * {
     grid-column: 2;
   }
