--- a/src/assets/styles/cmps/Reservation.scss
+++ b/src/assets/styles/cmps/Reservation.scss
@@ -1,52 +1,31 @@
 .reservation {
-  // border-top: 3px solid rgb(212, 198, 198);
-  border: 1px solid rgb(212, 198, 198);
   border-radius: 13px;
-  height: max-content;
+  gap: 0.5em;
+  height: 75vh;
   width: 100%;
   padding: 0;
   margin-bottom: 10em; // DELETE AFTER!
 }
 
-.left-side {
+.left-side-reservation {
   width: 40%;
-  //
+  height: 100%;
+  padding: 0;
   display: flex;
   flex-direction: column;
-  // border: 1px solid red;
-  .reservation-header {
-    align-items: center;
-    gap: 2em;
+  gap: 1em;
+  .row {
     padding: 0;
+    height: 100%;
+    gap: 0.6em;
 
-    .host-img {
-      width: 250px;
-      height: 250px;
-      object-fit: cover;
+    .box {
+      box-shadow: #0000001f 0 6px 16px;
+      padding: 0.2em;
       border-radius: 15px;
-    }
-    .host-info {
-      margin: 0;
-      h1 {
-        font-size: 2.5em;
-      }
-    }
-  }
-
-  .row > * {
-    display: flex;
-    flex-direction: column;
-    // align-items: center;
-    // border: 1px solid rgb(136, 36, 36);
-  }
-
-  .second-row {
-    padding: 0;
-
-    height: 60%;
-    div {
-      background-color: rgb(111, 175, 175);
       width: 100%;
+      height: 100%;
+
       h1 {
         text-align: center;
         font-size: 1.5em;
@@ -54,37 +33,33 @@
       }
     }
   }
-  .third-row {
-    padding: 0;
-    height: 40%;
-    div {
-      background-color: rgb(201, 206, 117);
-      width: 100%;
-    }
-  }
+  //
 }
 
 ///////////////////////////////////////////
-.right-side {
+.right-side-reservation {
+  position: relative;
   display: flex;
   flex-direction: column;
-  // gap: 1.3em;
-  // border-bottom: 1px solid rgb(212, 198, 198);
-
+  overflow-y: scroll;
   width: 60%;
-  border-left: 3px solid rgb(212, 198, 198);
+  min-width: 800px;
+  border: 1px solid rgb(223, 216, 216);
+  border-radius: 15px;
   margin: 0;
   padding: 0;
-  .reservation-title {
-    font-size: 2em;
-    text-align: center;
-    border-bottom: 1px solid rgb(206, 203, 203);
-  }
+
   .subtitle {
     display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    // display: flex;
-    // justify-content: space-between;
+    justify-items: center;
+    align-content: center;
+    // position: fixed;
+    font-family: Airbnb_Cereal-Medium;
+    grid-template-columns: 15% 15% 14% 14% 14% 14% 12%;
+    background-color: rgb(255 56 92 / 27%);
+    p {
+      margin: 0;
+    }
   }
   .card {
     display: grid;
@@ -93,8 +68,8 @@
     align-items: center;
     justify-items: center;
     margin-bottom: 1.3em;
-    border-bottom: 1px solid rgb(212, 198, 198);
-    // display: flex;
+    border-bottom: 1px solid rgb(139, 131, 131);
+
     img {
       width: 45px;
       height: 45px;
