--- a/src/assets/styles/cmps/CarouselFilterPreview.scss
+++ b/src/assets/styles/cmps/CarouselFilterPreview.scss
@@ -1,6 +1,7 @@
 .labels {
     font-size: 12px;
     margin-block: 1em;
+    width: 92vw;
 
     button .carousel__icon {
         font-family: Airbnb_Cereal-Bold;
