--- a/src/assets/styles/cmps/StayPreview.scss
+++ b/src/assets/styles/cmps/StayPreview.scss
@@ -1,99 +1,104 @@
-.stay-card {
-    position: relative;
-    padding: 0;
-    cursor: pointer;
-    font-family: CircularAir-Light;
-    color: $clr9;
-    font-size: 15px;
+.cards-layout {
+    justify-content: center;
+    grid-gap: 20px;
 
-    .mark {
-        fill: #ff385c !important;
-    }
-
-    .el-carousel__button {
-        width: 5px;
-        height: 5px;
-        border-radius: 50%;
-    }
-
-    .el-carousel__item h3 {
-        color: #475669;
-        opacity: 0.75;
-        line-height: 300px;
-        margin: 0;
-        text-align: center;
-    }
-
-    .el-carousel__item:nth-child(2n) {
-        background-color: #99a9bf;
-    }
-
-    .el-carousel__item:nth-child(2n + 1) {
-        background-color: #d3dce6;
-    }
-
-    .el-carousel__arrow {
-        background-color: $clr1;
-        color: $clr7;
-
-    }
-
-    .el-carousel__item {
-        img {
-            margin-block-end: 0;
-            object-fit: cover;
-            width: 100%;
-            height: 100%;
-            aspect-ratio: 1 / 1;
-        }
-
-        border-radius: 10px;
-    }
-
-    .info {
-        margin-block-start: 0.5rem;
-        line-height: 1.13rem;
+    .stay-card {
+        position: relative;
         padding: 0;
+        cursor: pointer;
+        font-family: CircularAir-Light;
+        color: $clr9;
+        font-size: 15px;
 
-        .stay-header {
-            justify-content: space-between;
-            margin-block-end: 0;
-
-            .stay-name {
-                font-family: Airbnb_Cereal-Medium;
-                color: $clr8;
-                justify-content: space-between;
-                overflow: hidden;
-                white-space: nowrap;
-                text-overflow: ellipsis;
-                width: 80%;
-                margin: 0;
-            }
-
-            .rate {
-                gap: 0.4em;
-                align-items: center;
-                font-family: CircularAir-Light;
-            }
+        .mark {
+            fill: #ff385c !important;
         }
 
-        main {
+        .el-carousel__button {
+            width: 5px;
+            height: 5px;
+            border-radius: 50%;
+        }
+
+        .el-carousel__item h3 {
+            color: #475669;
+            opacity: 0.75;
+            line-height: 300px;
+            margin: 0;
+            text-align: center;
+        }
+
+        .el-carousel__arrow {
+            background-color: $clr1;
+            color: $clr7;
+
+        }
+
+        .el-carousel__item {
+            img {
+                margin-block-end: 0;
+                object-fit: cover;
+                width: 100%;
+                height: 100%;
+            }
+
+            border-radius: 10px;
+        }
+
+        .el-carousel {
+            aspect-ratio: 1/1;
+        }
+
+        .el-carousel__container {
+            position: relative;
+            height: 100%;
+        }
+
+        .info {
+            margin-block-start: 0.5rem;
+            line-height: 1.13rem;
             padding: 0;
 
-            p {
-                margin: 0;
-                justify-content: start;
+            .stay-header {
+                justify-content: space-between;
+                margin-block-end: 0;
+
+                .stay-name {
+                    font-family: Airbnb_Cereal-Medium;
+                    color: $clr8;
+                    justify-content: space-between;
+                    overflow: hidden;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    width: 80%;
+                    margin: 0;
+                }
+
+                .rate {
+                    gap: 0.4em;
+                    align-items: center;
+                    font-family: CircularAir-Light;
+                }
             }
-        }
 
-        .cost {
-            font-family: AirbnbCereal-Book;
-            color: $clr8;
-            margin-block-start: 0.5rem;
+            main {
+                padding: 0;
 
-            .price {
-                font-family: Airbnb_Cereal-Medium;
-                color: $clr7;
+                p {
+                    margin: 0;
+                    justify-content: start;
+                }
+            }
+
+            .cost {
+                font-family: AirbnbCereal-Book;
+                color: $clr8;
+                margin-block-start: 0.5rem;
+
+                .price {
+                    font-family: Airbnb_Cereal-Medium;
+                    color: $clr7;
+                }
             }
         }
     }
