--- a/src/assets/styles/cmps/AppFooter.scss
+++ b/src/assets/styles/cmps/AppFooter.scss
@@ -15,7 +15,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
-        margin-inline-start: 4.2%;
+        // margin-inline-start: 4.2%;
         .coffeerights {
         display: flex;
         align-items: center;
