--- a/src/assets/styles/cmps/Reservation.scss
+++ b/src/assets/styles/cmps/Reservation.scss
@@ -41,7 +41,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
+  // overflow-y: scroll;
+
   width: 60%;
   min-width: 800px;
   border: 1px solid rgb(223, 216, 216);
