--- a/src/assets/styles/cmps/UserListing.scss
+++ b/src/assets/styles/cmps/UserListing.scss
@@ -29,21 +29,32 @@
     color: rgba(46, 46, 46, 0.5);
     border-bottom: 1px solid rgba(46, 46, 46, 0.3);
     // padding: 10px;
+    >*{
+      display: flex;
+      width: 100%;
+      padding: 5px;
+      border-left: 1px solid rgba(46, 46, 46, 0.3);
+      border-right: 1px solid rgba(46, 46, 46, 0.3);
+    }
   }
 }
 .main-listing-ul {
   margin: 0;
   padding: 0;
-  .inner-h4-listing{
-    width: 230px;
-  }
+  
   .main-listing-view-container {
-    display: grid;
+   display: grid;
     align-items: center;
     justify-items: start;
     // justify-content: space-between;
     grid-template-columns: 1.5fr repeat(5,1fr);
-    padding: 10px;
+    color: rgba(46, 46, 46, 0.5);
+    border-bottom: 1px solid rgba(46, 46, 46, 0.1);
+    padding-top: 10px;
+    padding-bottom: 10px;
+    >*{
+      margin: 0;
+    }
 
     .listing-stay-preview {
         display: flex;
@@ -69,7 +80,7 @@
       color: gray;
       // height: 35px;
       padding: 8px;
-      width: 114px;
+      width: max-content;
       text-align: center;
       cursor: pointer;
     }
