--- a/src/assets/styles/cmps/Reservation.scss
+++ b/src/assets/styles/cmps/Reservation.scss
@@ -3,14 +3,13 @@
   gap: 0.5em;
   height: 75vh;
   width: 100%;
-  padding: 0;
   margin-bottom: 10em; // DELETE AFTER!
 }
 
 .left-side-reservation {
+  padding: 0;
   width: 40%;
   height: 100%;
-  padding: 0;
   display: flex;
   flex-direction: column;
   gap: 1em;
@@ -21,7 +20,7 @@
 
     .box {
       box-shadow: #0000001f 0 6px 16px;
-      padding: 0.2em;
+      padding: 1em 1em 0.5em 1em;
       border-radius: 15px;
       width: 100%;
       height: 100%;
@@ -40,21 +39,23 @@
 .right-side-reservation {
   position: relative;
   display: flex;
+  // gap: 1em;
   flex-direction: column;
-  // overflow-y: scroll;
-
   width: 60%;
+  height: 100%;
   min-width: 800px;
   border: 1px solid rgb(223, 216, 216);
   border-radius: 15px;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 
   .subtitle {
     display: grid;
     justify-items: center;
     align-content: center;
     // position: fixed;
+
     font-family: Airbnb_Cereal-Medium;
     grid-template-columns: 15% 15% 14% 14% 14% 14% 12%;
     background-color: rgb(255 56 92 / 27%);
@@ -63,27 +64,32 @@
     }
   }
   .card {
+    padding: 0.3em;
     display: grid;
-    grid-template-columns: 14.5% 14.5% 14.5% 14.5% 14.5% 13.5% 7% 7%;
-    // grid-template-columns: repeat(8, 1fr);
+    grid-template-columns: 1fr 14.5% 14.5% 14.5% 14.5% 13.5% 7% 7%;
     align-items: center;
     justify-items: center;
-    margin-bottom: 1.3em;
-    border-bottom: 1px solid rgb(139, 131, 131);
-
+    border-bottom: 1px solid #ebeef5;
+    transition: 0.3s;
+    &:hover {
+      background-color: #f5f7fa;
+    }
+    .img-guest {
+      gap: 0.5em;
+    }
     img {
       width: 45px;
       height: 45px;
       border-radius: 50px;
       object-fit: cover;
-      margin-left: 0.7em;
     }
 
     h3,
     p {
       text-align: center;
       margin: 0;
-      margin-left: 0.3em;
+      font-size: 1em;
+      // margin-left: 0.3em;
     }
 
     .btn {
