--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -30,6 +30,9 @@
 @import 'cmps/DetailsReviews';
 @import 'cmps/DetailsCalendar';
 
+//pages
+@import 'cmps/Trips.scss';
+
 // Reservation Page
 @import 'cmps/StayReservation';
 
