--- a/src/assets/styles/cmps/AppHeader.scss
+++ b/src/assets/styles/cmps/AppHeader.scss
@@ -1,3 +1,21 @@
+.hr {
+  grid-column: 1/-1;
+  width: 100%;
+  opacity: 0.3;
+  margin: 0;
+}
+
+.screen-shadow {
+  position: absolute;
+  top: 155px;
+  right: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(113, 113, 113, 0.408);
+  z-index: 3;
+}
+
+@media (min-width:744px) {
 .main-header {
   display: flex;
   height: 80px;
@@ -133,33 +151,13 @@
   width: 280px;
   justify-content: space-between;
   align-items: center;
-
-  // .i18-btn {
-  //   color: $clr7;
-  //   padding: 12px;
-  //   cursor: pointer;
-  // }
-
-  // .i18-btn:hover {
-  //   background: #f7f7f7;
-  //   text-decoration: none;
-  //   border-radius: 50px;
-  // }
 }
 
-.hr {
-  grid-column: 1/-1;
-  width: 100%;
-  opacity: 0.3;
-  margin: 0;
 }
 
-.screen-shadow {
-  position: absolute;
-  top: 155px;
-  right: 0;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(113, 113, 113, 0.408);
-  z-index: 3;
+@media (min-width:900px) {
+  
 }
+
+
+
