--- a/src/assets/styles/cmps/InnerHeader.scss
+++ b/src/assets/styles/cmps/InnerHeader.scss
@@ -8,214 +8,156 @@
   height: 91px;
 }
 
-.flex-inner-header {
-  position: absolute;
-  top: 80px;
-  width: 100%;
-  background-color: #fff;
-  // height: 91px;
-  z-index: 11;
-  transition: 1s;
-
-  .inner-header-container {
+@media (min-width: 330px){
+    .flex-inner-header {
     position: absolute;
-    display: flex;
-    background-color: #ebebeb;
-    // background-color: black;
-    border-radius: 50px;
-    height: 64px;
-    right: calc(50% - 420px);
-    top: 8px;
+    top: 80px;
+    width: 100%;
+    background-color: #fff;
+    // height: 91px;
     z-index: 11;
-    padding-top: 0;
-    padding-bottom: 0;
-    width: 848px;
-    border-radius: 50px;
-    justify-content: space-between;
     transition: 1s;
 
-    .border-inner-header {
-      width: 0;
-      // margin-inline-start: 8px;
-      // padding-right: 8px;
-      height: 36px;
-      align-self: center;
-      border-left: solid 1px #dddddd;
-      margin: 0;
-    }
-    .where-to-btn {
-      position: relative;
-      width: 320px;
-      color: $clr7;
-      font-weight: bold;
-      cursor: pointer;
-      border-radius: 50px;
+    .inner-header-container {
+      position: absolute;
+      display: flex;
       background-color: #ebebeb;
-      text-align: left;
-      padding-left: 30px;
-      margin: 0px -4.1px -1px;
-      font-family: CircularAir-Light;
-      div {
-        margin: 0;
-      }
-      input {
-        margin: 0;
-        background-color: #ebebeb;
-        font-family: CircularAir-Light;
-        font-size: 15px;
-        cursor: pointer;
-      }
+      border-radius: 50px;
+      height: 64px;
+      right: calc(50% - 340px);
+      top: 8px;
+      z-index: 11;
+      padding-top: 0;
+      padding-bottom: 0;
+      width: 734px;
+      border-radius: 50px;
+      justify-content: space-between;
+      transition: 1s;
 
-      .stay-where-search {
-        position: absolute;
-        display: grid;
-        top: 81px;
-        width: 848px;
-        right: calc(50% - 685px);
-        height: 450px;
-        padding: 16px 32px;
-        border-radius: 32px;
-        z-index: 8;
-        background-color: #fff;
-        grid-template-columns: 1fr 35.5px 0.8fr;
-        box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.04), 0 8px 16px rgba(0, 0, 0, 0);
-        .stay-where-search-h2 {
-          padding-left: 31px;
-          font-size: 16px;
-        }
-        .counries-search-container > * {
-          padding: 8px 8px 8px 24px;
-          width: 100%;
-          color: #8f8f8f;
-          font-family: CircularAir-Light;
-          cursor: pointer;
-        }
-        .counries-search-container > *:hover {
-          background-color: #f7f7f7;
-          border-bottom-left-radius: 3px;
-          border-bottom-right-radius: 3px;
-        }
-        .counries-search-container > * > :first-child {
-          display: flex;
-          justify-content: center;
-          flex-wrap: wrap;
-          align-content: center;
-          background-color: #ddd;
-          width: 44px;
-          height: 44px;
-          border-radius: 12px;
-          margin-right: 16px;
-        }
-        .counries-search-container > * > span {
-          align-self: center;
-          font-size: 16px;
-        }
-        .line-between-where-search {
-          height: 100%;
-          border-left: solid 1px rgba(128, 128, 128, 0.2588235294);
-          padding: 0;
-        }
-        .chose-mainland {
-          display: grid;
-          grid-template-columns: 1fr 1fr 1fr;
-          grid-template-rows: 1fr 1fr;
-          row-gap: 24px;
-          column-gap: 5px;
-          .mainland-img {
-            width: 122px;
-            height: 122px;
-            border: 1px solid rgb(128, 128, 128, 0.3);
-            cursor: pointer;
-            padding: 0;
-            margin-bottom: 4px;
-            border-radius: 10px;
-            box-sizing: inherit;
-          }
-          .mainland-img:hover {
-            border-color: #222;
-          }
-          .region-mainland-choice {
-            font-size: 15px;
-            font-weight: 500;
-          }
-        }
+      .border-inner-header {
+        width: 0;
+        // margin-inline-start: 8px;
+        // padding-right: 8px;
+        height: 36px;
+        align-self: center;
+        border-left: solid 1px #dddddd;
+        margin: 0;
       }
-      .stay-where-search > div {
-        justify-self: start;
-        width: 100%;
-        padding-top: 30px;
-      }
-    }
-    .where-to-btn:hover {
-      background-color: #ddd;
-      input {
-        background-color: #ddd;
-      }
-    }
-    .inner-header-dates-btn {
-      padding-top: 12px;
-      padding-bottom: 12px;
-      padding-left: 25px;
-      padding-right: 23px;
-      margin: 0;
-      text-align: left;
-      align-self: center;
-      display: grid;
-      grid-template-columns: 80px 1fr;
-      grid-template-rows: 20px 1fr;
-      border-radius: 50px;
-      background-color: #ebebeb;
-      margin-left: -3px;
-      font-family: CircularAir-Light;
-      cursor: pointer;
-      div:nth-child(1) {
+      .where-to-btn {
+        position: relative;
+        width: 240px;
         color: $clr7;
         font-weight: bold;
-      }
-      div:nth-child(2) {
-        color: #777777;
-        font-weight: normal;
-        grid-row: 2;
-      }
-    }
-    .inner-header-dates-btn:hover {
-      background-color: #ddd;
-    }
-
-    .inner-header-search-btn-container {
-      position: relative;
-      display: flex;
-      justify-content: space-between;
-      width: 245px;
-      border-radius: 50px;
-      margin: 0px -3.5px;
-      button:nth-child(1) {
-        padding-left: 30px;
-      }
-      .inner-header-search-btn {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 4px;
-        margin: auto;
-        background-color: #ff385c;
-        border-radius: 50px;
-        width: 105px;
-        height: 50px;
         cursor: pointer;
-        &.big {
-          display: flex;
-          font-size: 16px;
-          color: white;
+        border-radius: 50px;
+        background-color: #ebebeb;
+        text-align: left;
+        padding-left: 30px;
+        margin: 0px -4.1px -1px;
+        font-family: CircularAir-Light;
+        div {
+          margin: 0;
+        }
+        input {
+          margin: 0;
+          background-color: #ebebeb;
           font-family: CircularAir-Light;
-          font-weight: bold;
+          font-size: 15px;
+          cursor: pointer;
+        }
+
+        .stay-where-search {
+          position: absolute;
+          display: grid;
+          top: 81px;
+          width: 744px;     
+          right: calc(50% - 613px);
+          height: 450px;
+          padding: 16px 32px;
+          border-radius: 32px;
+          z-index: 8;
+          background-color: #fff;
+          grid-template-columns: 1fr 35.5px 0.8fr;
+          box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.04), 0 8px 16px rgba(0, 0, 0, 0);
+          transition: 1s;
+          .stay-where-search-h2 {
+            padding-left: 31px;
+            font-size: 16px;
+          }
+          .counries-search-container > * {
+            padding: 8px 8px 8px 24px;
+            width: 100%;
+            color: #8f8f8f;
+            font-family: CircularAir-Light;
+            cursor: pointer;
+          }
+          .counries-search-container > *:hover {
+            background-color: #f7f7f7;
+            border-bottom-left-radius: 3px;
+            border-bottom-right-radius: 3px;
+          }
+          .counries-search-container > * > :first-child {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            align-content: center;
+            background-color: #ddd;
+            width: 44px;
+            height: 44px;
+            border-radius: 12px;
+            margin-right: 16px;
+          }
+          .counries-search-container > * > span {
+            align-self: center;
+            font-size: 16px;
+          }
+          .line-between-where-search {
+            height: 100%;
+            border-left: solid 1px rgba(128, 128, 128, 0.2588235294);
+            padding: 0;
+          }
+          .chose-mainland {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
+            row-gap: 24px;
+            column-gap: 5px;
+            .mainland-img {
+              width: 122px;
+              height: 122px;
+              border: 1px solid rgb(128, 128, 128, 0.3);
+              cursor: pointer;
+              padding: 0;
+              margin-bottom: 4px;
+              border-radius: 10px;
+              box-sizing: inherit;
+            }
+            .mainland-img:hover {
+              border-color: #222;
+            }
+            .region-mainland-choice {
+              font-size: 15px;
+              font-weight: 500;
+            }
+          }
+        }
+        .stay-where-search > div {
+          justify-self: start;
+          width: 100%;
+          padding-top: 30px;
         }
       }
-      .inner-header-dates-btn-search {
+      .where-to-btn:hover {
+        background-color: #ddd;
+        input {
+          background-color: #ddd;
+        }
+      }
+      .inner-header-dates-btn {
         padding-top: 12px;
         padding-bottom: 12px;
         padding-left: 25px;
-        // padding-right: 23px;
+        padding-right: 23px;
         margin: 0;
         text-align: left;
         align-self: center;
@@ -235,156 +177,230 @@
           color: #777777;
           font-weight: normal;
           grid-row: 2;
-          &.bold-inner-search {
+        }
+      }
+      .inner-header-dates-btn:hover {
+        background-color: #ddd;
+      }
+
+      .inner-header-search-btn-container {
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        width: 245px;
+        border-radius: 50px;
+        margin: 0px -3.5px;
+        button:nth-child(1) {
+          padding-left: 30px;
+        }
+        .inner-header-search-btn {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 4px;
+          margin: auto;
+          background-color: #ff385c;
+          border-radius: 50px;
+          width: 105px;
+          height: 50px;
+          cursor: pointer;
+          &.big {
+            display: flex;
+            font-size: 16px;
+            color: white;
+            font-family: CircularAir-Light;
             font-weight: bold;
+          }
+        }
+        .inner-header-dates-btn-search {
+          padding-top: 12px;
+          padding-bottom: 12px;
+          padding-left: 25px;
+          // padding-right: 23px;
+          margin: 0;
+          text-align: left;
+          align-self: center;
+          display: grid;
+          grid-template-columns: 80px 1fr;
+          grid-template-rows: 20px 1fr;
+          border-radius: 50px;
+          background-color: #ebebeb;
+          margin-left: -3px;
+          font-family: CircularAir-Light;
+          cursor: pointer;
+          div:nth-child(1) {
+            color: $clr7;
+            font-weight: bold;
+          }
+          div:nth-child(2) {
+            color: #777777;
+            font-weight: normal;
+            grid-row: 2;
+            &.bold-inner-search {
+              font-weight: bold;
+            }
+          }
+        }
+      }
+      .inner-header-search-btn-container:hover {
+        background-color: #ddd;
+        .inner-header-dates-btn-search {
+          background-color: #ddd;
+        }
+      }
+
+      .isActive {
+        background-color: white;
+        box-shadow: 0 0 0 1px #0000000a, 0 5px 16px #00000026;
+        input {
+          background-color: white;
+        }
+      }
+      .isActive:hover {
+        background-color: white;
+        input {
+          background-color: white;
+        }
+      }
+      .inner-header-search-btn-container {
+        &.isActive {
+          background-color: white;
+          .inner-header-dates-btn-search {
+            background-color: white;
           }
         }
       }
     }
-    .inner-header-search-btn-container:hover {
-      background-color: #ddd;
-      .inner-header-dates-btn-search {
-        background-color: #ddd;
-      }
-    }
+  }
 
-    .isActive {
-      background-color: white;
-      box-shadow: 0 0 0 1px #0000000a, 0 5px 16px #00000026;
-      input {
-        background-color: white;
-      }
+  .calender-container {
+    position: absolute;
+    display: grid;
+    top: 81px;
+    width: 744px;
+    right: calc(50% - 365px);
+    // height: 450px;
+    height: 350px;
+    padding: 16px 32px;
+    padding-bottom: 24px;
+    border-radius: 32px;
+    z-index: 8;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 16px;
+    background-color: #fff;
+    align-items: center;
+    justify-items: left;
+  }
+
+  .calendar {
+    grid-column: 1/-1;
+    width: 100%;
+  }
+  .search-inner-header-cotainer {
+    position: absolute;
+    box-shadow: 0 0 0 1px #0000000a, 0 8px 16px #00000026;
+    top: 81px;
+    width: 403px;
+    height: 403px;
+    right: calc(50% - 125px);
+    height: 410px;
+    padding: 10px 32px;
+    border-radius: 32px;
+    z-index: 8;
+    background-color: #fff;
+    display: grid;
+    gap: 1px;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    font-size: 12px;
+    font-family: CircularAir-Light;
+    // .bold-inner-search{
+    //   font-weight: bold;
+    //   font-size: 15px;
+    // }
+    .add-guest-button {
+      display: flex;
+      align-items: center;
+      background-color: #fff;
+      color: #717171;
+      border: 1px solid;
+      border-color: #b0b0b0;
+      border-radius: 50%;
+      width: 32px;
+      height: 32px;
+      margin: 5px;
+      padding-left: 9px;
+      cursor: pointer;
     }
-    .isActive:hover {
-      background-color: white;
-      input {
-        background-color: white;
-      }
+    .add-guest-span {
+      align-self: center;
+      height: 34px;
+      font-size: 15px;
     }
-    .inner-header-search-btn-container {
-      &.isActive {
-        background-color: white;
-        .inner-header-dates-btn-search {
-          background-color: white;
+    .add-guest-button.disabled {
+      cursor: auto;
+      border-color: #ebebeb;
+    }
+    .flex-inner-search-btns {
+      display: flex;
+      justify-content: space-between;
+    }
+    .plus-animals {
+      text-decoration: underline;
+      cursor: pointer;
+    }
+    .search-inner-header-cotainer-p {
+      font-size: 14px;
+      margin: 0;
+    }
+  }
+  .search-inner-header-cotainer > * {
+    padding: 24px 0;
+  }
+
+  .flex-inner-header
+    .inner-header-container
+    .inner-header-search-btn-container
+    .search-inner-header-cotainer
+    button:nth-child(1) {
+    padding-left: 0px;
+  }
+  .flex-inner-header .inner-header-container .inner-header-dates-btn div:nth-child(2) {
+    color: #777777;
+    font-size: 15px;
+  }
+  .flex-inner-header
+    .inner-header-container
+    .inner-header-search-btn-container
+    .inner-header-dates-btn-search
+    div:nth-child(2) {
+    color: #777777;
+    font-weight: normal;
+    font-size: 15px;
+  }
+}
+
+
+@media (min-width: 744px) {
+
+}
+
+@media (min-width: 900px) {
+  .flex-inner-header {
+    .inner-header-container {
+      width: 848px;
+      right: calc(50% - 420px);
+      .where-to-btn {
+        width: 320px;
+        .stay-where-search{
+          width: 848px;
+            right: calc(50% - 685px);
         }
       }
     }
+    .calender-container{
+        width: 848px;
+    right: calc(50% - 420px);
+    }
   }
-}
-
-.calender-container {
-  position: absolute;
-  display: grid;
-  top: 81px;
-  width: 848px;
-  right: calc(50% - 420px);
-  height: 450px;
-  padding: 16px 32px;
-  padding-bottom: 24px;
-  border-radius: 32px;
-  z-index: 8;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 16px;
-  background-color: #fff;
-  align-items: center;
-  justify-items: left;
-}
-
-.calendar {
-grid-column: 1/-1;
-width: 100%;
-}
-
-// .calendar:last-child {
-//   margin-right: 0;
-// }
-// .calendar{
-//   max-width: 100%;
-// }
-// .vc-pane-layout {
-//   background-color: red;
-//   display: flex;
-// }
-// s
-.search-inner-header-cotainer {
-  position: absolute;
-  box-shadow: 0 0 0 1px #0000000a, 0 8px 16px #00000026;
-  top: 81px;
-  width: 403px;
-  height: 403px;
-  right: calc(50% - 125px);
-  height: 410px;
-  padding: 10px 32px;
-  border-radius: 32px;
-  z-index: 8;
-  background-color: #fff;
-  display: grid;
-  gap: 1px;
-  grid-template-columns: 2fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  font-size: 12px;
-  font-family: CircularAir-Light;
-  // .bold-inner-search{
-  //   font-weight: bold;
-  //   font-size: 15px;
-  // }
-  .add-guest-button {
-    display: flex;
-    align-items: center;
-    background-color: #fff;
-    color: #717171;
-    border: 1px solid;
-    border-color: #b0b0b0;
-    border-radius: 50%;
-    width: 32px;
-    height: 32px;
-    margin: 5px;
-    padding-left: 9px;
-    cursor: pointer;
-  }
-  .add-guest-span {
-    align-self: center;
-    height: 34px;
-    font-size: 15px;
-  }
-  .add-guest-button.disabled {
-    cursor: auto;
-    border-color: #ebebeb;
-  }
-  .flex-inner-search-btns {
-    display: flex;
-    justify-content: space-between;
-  }
-  .plus-animals {
-    text-decoration: underline;
-    cursor: pointer;
-  }
-  .search-inner-header-cotainer-p {
-    font-size: 14px;
-    margin: 0;
-  }
-}
-.search-inner-header-cotainer > * {
-  padding: 24px 0;
-}
-
-.flex-inner-header
-  .inner-header-container
-  .inner-header-search-btn-container
-  .search-inner-header-cotainer
-  button:nth-child(1) {
-  padding-left: 0px;
-}
-.flex-inner-header .inner-header-container .inner-header-dates-btn div:nth-child(2) {
-  color: #777777;
-  font-size: 15px;
-}
-.flex-inner-header
-  .inner-header-container
-  .inner-header-search-btn-container
-  .inner-header-dates-btn-search
-  div:nth-child(2) {
-  color: #777777;
-  font-weight: normal;
-  font-size: 15px;
 }
