--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -23,6 +23,9 @@
 @import 'cmps/InnerHeader';
 @import 'cmps/AppHeaderDetails';
 @import 'cmps/AppFooter';
+@import 'cmps/AppHeaderMobile';
+@import 'cmps/AppFooterMobile';
+
 
 // Detalis
 @import 'cmps/StayDetails';
