--- a/src/assets/styles/cmps/Dashboard.scss
+++ b/src/assets/styles/cmps/Dashboard.scss
@@ -3,4 +3,15 @@
     justify-content: space-evenly;
     width: 50%;
     margin: auto;
+    >*{
+        color: black;
+        padding: 5px;
+    }
+    >*:hover{
+        // border-bottom: 1px solid black;
+        // background-color: rgba(52, 51, 51, 0.2);
+        background-color: rgb(255, 56, 92,.1);
+        box-shadow: 1px 0px 10px 01px rgb(255, 56, 92,.3);
+        border-radius: 5px;
+    }
 }
