--- a/src/assets/styles/cmps/InnerHeader.scss
+++ b/src/assets/styles/cmps/InnerHeader.scss
@@ -8,8 +8,8 @@
   height: 91px;
 }
 
-@media (min-width: 330px){
-    .flex-inner-header {
+@media (min-width: 330px) {
+  .flex-inner-header {
     position: absolute;
     top: 80px;
     width: 100%;
@@ -70,7 +70,7 @@
           position: absolute;
           display: grid;
           top: 81px;
-          width: 744px;     
+          width: 744px;
           right: calc(50% - 613px);
           height: 450px;
           padding: 16px 32px;
@@ -82,7 +82,15 @@
           transition: 1s;
           .stay-where-search-h2 {
             padding-left: 31px;
-            font-size: 16px;
+            font-size: 1.225em;
+            margin-block-end: 16px;
+          }
+          .search-by-region-h2{
+            font-size: 1.225em;
+            margin-block-end: 20px;
+          }
+          .counries-search-container{
+             margin-block-start: 27px;
           }
           .counries-search-container > * {
             padding: 8px 8px 8px 24px;
@@ -90,6 +98,7 @@
             color: #8f8f8f;
             font-family: CircularAir-Light;
             cursor: pointer;
+            
           }
           .counries-search-container > *:hover {
             background-color: #f7f7f7;
@@ -110,6 +119,7 @@
           .counries-search-container > * > span {
             align-self: center;
             font-size: 16px;
+
           }
           .line-between-where-search {
             height: 100%;
@@ -122,6 +132,7 @@
             grid-template-rows: 1fr 1fr;
             row-gap: 24px;
             column-gap: 5px;
+            margin-block-start: 33px;
             .mainland-img {
               width: 122px;
               height: 122px;
@@ -134,6 +145,7 @@
             }
             .mainland-img:hover {
               border-color: #222;
+              transition: .3s;
             }
             .region-mainland-choice {
               font-size: 15px;
@@ -144,7 +156,7 @@
         .stay-where-search > div {
           justify-self: start;
           width: 100%;
-          padding-top: 30px;
+          padding-top: 20px;
         }
       }
       .where-to-btn:hover {
@@ -158,6 +170,7 @@
         padding-bottom: 12px;
         padding-left: 25px;
         padding-right: 23px;
+        padding-right: 35px;
         margin: 0;
         text-align: left;
         align-self: center;
@@ -252,6 +265,7 @@
       .isActive {
         background-color: white;
         box-shadow: 0 0 0 1px #0000000a, 0 5px 16px #00000026;
+        scale: 1.02;
         input {
           background-color: white;
         }
@@ -280,22 +294,52 @@
     width: 744px;
     right: calc(50% - 365px);
     // height: 450px;
-    height: 350px;
+    height: 500px;
     padding: 16px 32px;
     padding-bottom: 24px;
     border-radius: 32px;
     z-index: 8;
-    grid-template-columns: repeat(3, 1fr);
+    // grid-template-columns: repeat(3, 1fr);
     grid-gap: 16px;
     background-color: #fff;
     align-items: center;
     justify-items: left;
   }
 
-  .calendar {
+  .calendar1 {
     grid-column: 1/-1;
     width: 100%;
+    border: none;
+    .vc-arrow {
+      width: 50px;
+    }
   }
+  .vc-container button, .vc-container [role='button']{
+    cursor: pointer;
+    /* width: 100px; */
+    /* padding: inherit; */
+    // height: 52px;
+    margin-block-start: 17px;
+    margin-block-end: 17px;
+  }
+  .vc-highlight-content-solid {
+    background-color: #222;
+    scale: 1.3;
+}
+.vc-arrow.vc-prev.vc-focus {
+  background-color: #ffffff;
+  color: black;
+}
+.vc-arrow.vc-next.vc-focus {
+  background-color: #ffffff;
+  color: black;
+}
+.vc-container button,
+.vc-container [role='button']:hover {
+  transition: 0.1s;
+  background-color: #161414;
+  color: white;
+}
   .search-inner-header-cotainer {
     position: absolute;
     box-shadow: 0 0 0 1px #0000000a, 0 8px 16px #00000026;
@@ -380,9 +424,7 @@
   }
 }
 
-
 @media (min-width: 744px) {
-
 }
 
 @media (min-width: 900px) {
@@ -392,15 +434,15 @@
       right: calc(50% - 420px);
       .where-to-btn {
         width: 320px;
-        .stay-where-search{
+        .stay-where-search {
           width: 848px;
-            right: calc(50% - 685px);
+          right: calc(50% - 685px);
         }
       }
     }
-    .calender-container{
-        width: 848px;
-    right: calc(50% - 420px);
+    .calender-container {
+      width: 848px;
+      right: calc(50% - 420px);
     }
   }
 }
