--- a/src/assets/styles/cmps/StayEdit.scss
+++ b/src/assets/styles/cmps/StayEdit.scss
@@ -74,6 +74,7 @@
       margin-top: 15px;
       text-align: left;
       align-items: start;
+
       p {
         height: 100%;
       }
@@ -84,10 +85,12 @@
         border-top-left-radius: 15px;
         height: 100%;
         border: 1px solid black;
+        padding: 15px;
       }
       .add-img-upload {
         border: 1px solid black;
         height: 100%;
+        padding: 15px;
       }
     }
   }
