--- a/src/assets/styles/cmps/Dashboard.scss
+++ b/src/assets/styles/cmps/Dashboard.scss
@@ -1,17 +1,19 @@
-.dashboard-nav-container{
-    display: flex;
-    justify-content: space-evenly;
-    width: 50%;
-    margin: auto;
-    >*{
-        color: black;
-        padding: 5px;
-    }
-    >*:hover{
-        // border-bottom: 1px solid black;
-        // background-color: rgba(52, 51, 51, 0.2);
-        background-color: rgb(255, 56, 92,.1);
-        box-shadow: 1px 0px 10px 01px rgb(255, 56, 92,.3);
-        border-radius: 5px;
-    }
+.dashboard-nav-container {
+  display: flex;
+  justify-content: space-evenly;
+  width: 50%;
+  margin: auto;
+  > * {
+    color: black;
+    padding: 5px;
+  }
+  > *:hover {
+    transition: 0.5s;
+    scale: 1.05;
+    // border-bottom: 1px solid black;
+    // background-color: rgba(52, 51, 51, 0.2);
+    background-color: rgb(255, 56, 92, 0.1);
+    box-shadow: 1px 0px 10px 01px rgb(255, 56, 92, 0.3);
+    border-radius: 5px;
+  }
 }
