--- a/src/assets/styles/cmps/Trips.scss
+++ b/src/assets/styles/cmps/Trips.scss
@@ -3,7 +3,7 @@
     .trips-preview {
         display: grid;
         grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: repeat(3, 1fr) 1.6fr;
+        grid-template-rows: repeat(3, 1fr);
         grid-column-gap: 20px;
         grid-row-gap: 10px;
         margin-block-end: 10px;
@@ -16,27 +16,48 @@
 
         .mini-card {
             border: 1px solid #DDDDDD;
-            color: #222;
+            color: $clr8;
             border-radius: 12px;
             padding: 18px;
             margin-block-start: 20px;
 
-            &.next-stay {
+            &.next-stay,
+            &.prev-stay {
                 grid-column: 1 / 5;
                 grid-row: 1/3;
                 justify-content: space-between;
+                font-size: 1.45rem;
+                flex-wrap: nowrap;
+
+
+                .main-header {
+                    font-size: 1.35rem;
+                }
+
+                .info {
+                    .dates {
+                        margin-block: 1em;
+                    }
+
+                    .header {
+                        font-family: Airbnb_Cereal-Bold;
+                        font-size: 1.25rem;
+                    }
+                }
+
+                img {
+                    object-fit: cover;
+                    width: 65%;
+                }
             }
 
             &.wishlist {
                 grid-column: 5/7;
-                grid-row: 1/2;
-                width: 100%;
-            }
+                grid-row: 1/3;
 
-            &.message {
-                grid-column: 5/7;
-                grid-row: 2/3;
-                width: 100%;
+                .link {
+                    color: $clr8;
+                }
             }
 
         }
@@ -46,15 +67,21 @@
             grid-row: 3;
             padding: 18px;
             margin-block-start: 20px;
+            font-size: 1.25rem;
 
             .stay-in-prev-stays {
                 margin-inline-end: 5em;
-                
+
                 img {
                     margin-inline-end: 1em;
                     object-fit: cover;
                     height: 72px;
                     width: 72px;
+                }
+
+                .header {
+                    font-family: Airbnb_Cereal-Bold;
+                    font-size: 1.15rem;
                 }
             }
         }
