--- a/src/assets/styles/cmps/UserListing.scss
+++ b/src/assets/styles/cmps/UserListing.scss
@@ -93,6 +93,9 @@
       align-items: left;
     }
   }
+  .listing-preview-inner-h4{
+    margin-inline-start: 15px;
+  }
 }
 .main-listing-view-container:hover{
     background-color: rgb(128, 128, 128,.1);
