--- a/src/assets/styles/cmps/StayEdit.scss
+++ b/src/assets/styles/cmps/StayEdit.scss
@@ -15,11 +15,11 @@
   //   }
   .stay-edit-container {
     display: grid;
-    grid-template-columns: minmax(48px, 60px) 1fr minmax(48px, 60px);
-    margin-block-start: 50px;
+    grid-template-columns: minmax(48px, 180px) 1fr minmax(48px, 180px);
+    margin-block-start: 10px;
     border-radius: 15px;
     padding: 20px;
-    background-color: rgb(224, 224, 224, 0.4);
+    // background-color: rgb(224, 224, 224, 0.4);
     > * {
       grid-column: 2;
     }
@@ -32,13 +32,17 @@
       gap: 10px;
       width: 100%;
     }
+    .el-input__wrapper{
+      height: 40px;
+      border: 1px solid rgb(157, 157, 157);
+    }
     .edit-stay-first-inputs {
       border: 0;
       outline: 0;
       font-family: inherit;
-      border-bottom: 1px solid rgb(215, 215, 215);
+      border: 1px solid rgb(157, 157, 157);
       padding: 15px;
-      border-radius: 15px;
+      border-radius: 5px;
       min-width: 100px;
       width: 100%;
     }
@@ -69,7 +73,7 @@
       border-radius: 20px;
       gap: 8px;
       margin-bottom: 15px;
-      height: 350px;
+      height: 250px;
       width: 100%;
       margin-top: 15px;
       text-align: left;
