--- a/src/assets/styles/cmps/Trips.scss
+++ b/src/assets/styles/cmps/Trips.scss
@@ -56,7 +56,19 @@
                 grid-row: 1/3;
 
                 .link {
-                    color: $clr8;
+                    font-family: AirbnbCereal-Book;
+                    margin-block-start: 1em;
+                    margin-block-end: 0;
+                    display: flex;
+                    justify-content: center;
+                    margin-block-end: 1em;
+                    color: $clr1;
+                    background: radial-gradient(circle at left, #ff385c 0%, #e61e4d 27.5%, #e31c5f 40%, #d70466 57.5%, #bd1e59 75%, #bd1e59 100%);
+                    font-size: 1rem;
+                    border: 1px solid $clr8;
+                    padding: 5px;
+                    border-radius: 10px;
+                    border-radius: 50px;
                 }
             }
 
