--- a/src/assets/styles/cmps/AppHeaderDetails.scss
+++ b/src/assets/styles/cmps/AppHeaderDetails.scss
@@ -1,3 +1,9 @@
+.main-header {
+  &.details {
+    position: relative;
+  }
+}
+
 .main-filter-header:hover {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
 }
@@ -24,9 +30,9 @@
   align-items: center;
   margin-inline-start: 12.1%;
   .main-filter-btn-details {
-      color: $clr7;
-      font-family: Airbnb_Cereal-Medium;
-      cursor: pointer;
-      font-size: 14px;
-    }
+    color: $clr7;
+    font-family: Airbnb_Cereal-Medium;
+    cursor: pointer;
+    font-size: 14px;
+  }
 }
