--- a/src/assets/styles/cmps/CarouselFilterPreview.scss
+++ b/src/assets/styles/cmps/CarouselFilterPreview.scss
@@ -8,7 +8,7 @@
     background-color: $clr1;
 
     .carousel__slide {
-        // width: 80px !important;
+        width: 80px !important;
     }
 
     .carousel__prev.carousel__prev--disabled,
