change the store

--- a/src/assets/styles/cmps/CarouselFilterPreview.scss
+++ b/src/assets/styles/cmps/CarouselFilterPreview.scss
@@ -7,9 +7,9 @@
     z-index: 4;
     background-color: $clr1;
 
-    .carousel__slide {
-        width: 80px !important;
-    }
+    // .carousel__slide {
+        // width: 80px !important;
+    // }
 
     .carousel__prev.carousel__prev--disabled,
     .carousel__next.carousel__next--disabled {
