trip and wishlist by the new way

--- a/src/assets/styles/cmps/WishListPreview.scss
+++ b/src/assets/styles/cmps/WishListPreview.scss
@@ -12,6 +12,7 @@
 
     .stays-wishlist-container {
         grid-template-columns: repeat(auto-fill, minmax(auto, 21.63em));
+        justify-content: center;
         margin: -5px;
         gap: 20px;
 
